--- a/sass/components/_chart-title.scss
+++ b/sass/components/_chart-title.scss
@@ -151,7 +151,7 @@
         .cq-menu-dropdown{
             width: 100%;
             margin: 0px !important;
-            top: 0px !important;
+            top: -4px !important;
             left: 0px !important;
             &.open{
                 margin: 0px;
@@ -159,7 +159,7 @@
             }
             .cq-categorical-display{
                 .cq-scroll-panel{
-                    height: calc( 100vh - 15em );
+                    height: calc( 100vh - 11em );
                 }
                 .cq-categorical-footer{
                     display: block;
